# niconeon

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SOURCE_CODE.md  THIRD_PARTY_NOTICES.txt  justfile
.github/workflows/: ci.yml  release-rebuild.yml  release.yml
app-ui/: CMakeLists.txt
app-ui/qml/: Main.qml
app-ui/qml/components/: AboutDialog.qml  AppButton.qml  AppDialog.qml  AppTabButton.qml  AppTextArea.qml  AppTextField.qml  DanmakuItem.qml  DanmakuOverlay.qml  FilterDialog.qml  FontSizeDialog.qml  NgDropZone.qml  PlaybackSpeedDialog.qml  SettingsDialog.qml  Toast.qml  VideoPlayer.qml
app-ui/qml/theme/: AppTheme.qml
app-ui/src/: LicenseProvider.cpp  LicenseProvider.hpp  main.cpp
app-ui/src/danmaku/: DanmakuAtlasPacker.cpp  DanmakuAtlasPacker.hpp  DanmakuController.cpp  DanmakuController.hpp  DanmakuListModel.cpp  DanmakuListModel.hpp  DanmakuRenderFrame.hpp  DanmakuRenderNodeItem.cpp  DanmakuRenderNodeItem.hpp  DanmakuRenderStyle.hpp  DanmakuSceneItem.cpp  DanmakuSceneItem.hpp  DanmakuSimdUpdater.cpp  DanmakuSimdUpdater.hpp  DanmakuSoAState.hpp  DanmakuSpatialGrid.cpp  DanmakuSpatialGrid.hpp  DanmakuTextSpriteCache.cpp  DanmakuTextSpriteCache.hpp  DanmakuUpdateWorker.cpp  DanmakuUpdateWorker.hpp
app-ui/src/ipc/: CoreClient.cpp  CoreClient.hpp
app-ui/src/mpv/: MpvItem.cpp  MpvItem.hpp
app-ui/tests/e2e/: rendernode_alignment_e2e.cpp
app-ui/tests/support/: fake_core.cpp
app-ui/tests/unit/: core_client_test.cpp  danmaku_ng_drop_test.cpp  danmaku_sprite_cache_test.cpp  danmaku_text_width_test.cpp  spatial_grid_incremental_test.cpp
core/: Cargo.toml
core/crates/niconeon-core/: Cargo.toml
core/crates/niconeon-core/src/: lib.rs  main.rs
core/crates/niconeon-domain/: Cargo.toml
core/crates/niconeon-domain/src/: lib.rs
core/crates/niconeon-fetcher/: Cargo.toml
core/crates/niconeon-fetcher/src/: lib.rs
core/crates/niconeon-filter/: Cargo.toml
core/crates/niconeon-filter/src/: lib.rs
core/crates/niconeon-protocol/: Cargo.toml
core/crates/niconeon-protocol/src/: lib.rs
core/crates/niconeon-store/: Cargo.toml
core/crates/niconeon-store/src/: lib.rs
docs/: architecture.md  licensing.md  performance-measurement.md  protocol.md  test-plan.md  ui-design.md
packaging/appimage/: niconeon.desktop
packaging/licenses/: manual_components.toml
scripts/perf/: run_dummy_profile.sh
scripts/release/: generate_commit_changelog.sh  generate_full_changelog.sh  generate_third_party_notices.sh  package_linux.sh  package_linux_appimage.sh  package_source.sh  package_windows_msys2.sh  update_repo_changelog.sh  verify_binary_artifact_licenses.sh  write_checksums.sh
