[package]
name = "niconeon-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
niconeon-domain = { path = "../niconeon-domain" }
niconeon-fetcher = { path = "../niconeon-fetcher" }
niconeon-filter = { path = "../niconeon-filter" }
niconeon-protocol = { path = "../niconeon-protocol" }
niconeon-store = { path = "../niconeon-store" }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
