[package]
name = "niconeon-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
directories.workspace = true
niconeon-domain = { path = "../niconeon-domain" }
rusqlite.workspace = true
serde_json.workspace = true
regex.workspace = true
